fixed stats color and alignments

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-
-
-
-
-
 body {
   /* because of fixed navbar */
   padding-top: 55px;
@@ -110,27 +105,25 @@ button {
 }
 
 .carousel-indicators li {
-    cursor: initial;
-    background-color: lightgrey;
-    height: 30px;
-
-    text-indent: 10px;
-      margin: 0 2px;
-      width: 30px;
-      height: 30px;
-      border: none;
-      line-height: 30px;
-      color: #fff;
-        background-color: lightgrey;
-      transition: all 0.25s ease;
+  cursor: initial;
+  background-color: lightgrey;
+  height: 30px;
+  text-indent: 10px;
+  margin: 0 2px;
+  width: 30px;
+  height: 30px;
+  border: none;
+  line-height: 30px;
+  color: #fff;
+  background-color: lightgrey;
+  transition: all 0.25s ease;
 }
 .carousel-indicators li.active,
 .carousel-indicators li.hover {
-    background-color: black;
-
-    margin: 0 2px;
-       width: 30px;
-       height: 30px;
+  background-color: black;
+  margin: 0 2px;
+  width: 30px;
+  height: 30px;
 }
 
 .question-number {
@@ -138,22 +131,21 @@ button {
 }
 .stats {
   display: flex;
-  justify-content: center;
-    padding: 10px 20px;
+  justify-content: space-between;
+  padding: 10px 20px;
+  color: white;
 }
 .stats > div {
   width: 33%;
 }
 
-
-
-
-
-
-[class^="flaticon-"]:before, [class*=" flaticon-"]:before, [class^="flaticon-"]:after, [class*=" flaticon-"]:after {
-    font-size: 30px;
-    margin-left: 0px;
-    margin-right: 10px;
+[class^="flaticon-"]:before,
+[class*=" flaticon-"]:before,
+[class^="flaticon-"]:after,
+[class*=" flaticon-"]:after {
+  font-size: 30px;
+  margin-left: 0px;
+  margin-right: 10px;
 }
 .card-deck a {
   color: initial;
@@ -175,9 +167,7 @@ h5.card-title {
   -ms-transform: scale(1.02);
   transform: scale(1.02);
 }
-/* h5.card-title:hover, .card-body i:hover {
-  text-decoration: none;
-} */
+
 .card-deck .col-md-6,
 .card-deck .col-lg-4,
 .card-deck .col-xl-3 {
@@ -244,7 +234,6 @@ h5.card-title {
 }
 
 @media screen and (max-width: 576px) {
-
   .nav-right {
     margin-left: unset;
   }
